--- a/src/components/Sections/HeaderMenu.css
+++ b/src/components/Sections/HeaderMenu.css
@@ -2,16 +2,19 @@
 	position: fixed;
 	display: flex;
 	width: 100vw;
-	max-width: 2000px;
+	height: 8vh;
+	/* max-width: 2000px; */
 	flex-wrap: wrap;
 	justify-content: space-between;
-	background-color: rgba(255, 255, 255, 0.7);
+	background-color: rgba(255, 255, 255, 0.9);
+	/* background: linear-gradient(to bottom, #fff 0%, #1c00ff00 100%); */
 	z-index: 100;
 }
 
 .logo {
-	width: 5rem;
-	margin: 5px;
+	width: 4.5rem;
+	height: auto;
+	margin: 0.8rem 1.2rem;
 	/* Fallback img */
 	/* background: url('../../assets/WB-Submark-CMYK.png'); */
 }
