--- a/src/components/Sections/HeaderMenu.module.css
+++ b/src/components/Sections/HeaderMenu.module.css
@@ -1,4 +1,4 @@
-.nav-container {
+.navContainer {
 	position: fixed;
 	display: flex;
 	width: 100vw;
@@ -19,7 +19,7 @@
 	/* background: url('../../assets/WB-Submark-CMYK.png'); */
 }
 
-.header-nav {
+.headerNav {
 	display: flex;
 	margin-right: 20px;
 }
