--- a/src/components/Sections/Hero.module.css
+++ b/src/components/Sections/Hero.module.css
@@ -70,8 +70,9 @@
 .titleWrapper h5 {
 	text-align: center;
 	margin: 0;
-	font-size: 4rem;
+	font-size: 6.5rem;
 	font-family: 'Hello January';
+	font-weight: 300;
 	/* text-shadow: 2px 2px 2px #000; */
 }
 
