--- a/src/components/Sections/Header.module.css
+++ b/src/components/Sections/Header.module.css
@@ -2,7 +2,7 @@
 	position: fixed;
 	display: flex;
 	width: 100vw;
-	height: 8vh;
+	height: 10vh;
 	/* max-width: 2000px; */
 	flex-wrap: wrap;
 	justify-content: space-between;
@@ -13,8 +13,8 @@
 
 .logo {
 	width: 4.5rem;
-	height: auto;
-	margin: 0.8rem 2.5rem;
+	height: 4.5rem;
+	margin: 0.6rem 2.5rem;
 	/* Fallback img */
 	/* background: url('../../assets/WB-Submark-CMYK.png'); */
 }
@@ -35,9 +35,9 @@ a {
 	list-style-type: none;
 	text-decoration: none;
 	color: #aa480b;
-	font-size: 1.2rem;
+	font-size: 1.1rem;
 }
 
 li {
-	padding: 20px;
+	padding: 1.2rem;
 }
