--- a/src/components/UI/Options.module.css
+++ b/src/components/UI/Options.module.css
@@ -1,9 +1,13 @@
 .options {
+	position: absolute;
+	top: 10rem;
+	left: 0;
 	display: flex;
 	flex-direction: column;
 	width: 100vw;
 	justify-content: center;
 	align-items: center;
+	z-index: 10;
 }
 
 .optionsGroup {
