end of work day commit

--- a/src/components/Sections/Options/Seniors.module.css
+++ b/src/components/Sections/Options/Seniors.module.css
@@ -1,10 +1,6 @@
 .seniors {
-	background: blue;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 2rem;
-	z-index: 0;
-	height: 40rem;
-	width: 40rem;
+	background: url('https://images.unsplash.com/photo-1618355896507-61af331ed895?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3181&q=80');
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
