--- a/src/components/Sections/Options/Couples.module.css
+++ b/src/components/Sections/Options/Couples.module.css
@@ -1,7 +1,6 @@
 .couples {
-	background: purple;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 2rem;
+	background: url('https://images.unsplash.com/photo-1497414826197-4166f61a8e14?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80');
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
