--- a/src/components/Sections/Options/Families.module.css
+++ b/src/components/Sections/Options/Families.module.css
@@ -1,7 +1,6 @@
 .families {
-	background: red;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 2rem;
+	background: url('https://images.unsplash.com/photo-1511895426328-dc8714191300?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3270&q=80');
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
