end of work day commit, working on implementing CSS animations and added new font

--- a/src/components/Sections/Hero.module.css
+++ b/src/components/Sections/Hero.module.css
@@ -70,8 +70,8 @@
 .titleWrapper h5 {
 	text-align: center;
 	margin: 0;
-	font-size: 6.5rem;
-	font-family: 'Hello January';
+	font-size: 8rem;
+	font-family: 'Brian-Strait';
 	font-weight: 300;
 	/* text-shadow: 2px 2px 2px #000; */
 }
