--- a/src/components/Sections/Options/Seniors.module.css
+++ b/src/components/Sections/Options/Seniors.module.css
@@ -1,3 +1,7 @@
+.pageBG {
+	background-color: #ded5cc;
+}
+
 .seniors {
 	background: url('https://images.unsplash.com/photo-1618355896507-61af331ed895?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3181&q=80');
 	background-position: center center;
