--- a/src/components/Sections/Options/AllPackages.module.css
+++ b/src/components/Sections/Options/AllPackages.module.css
@@ -1,9 +1,8 @@
 .page {
-	height: 100vh;
+	height: 200vh;
 }
 
 .packagesHero {
-	position: absolute;
 	top: 0;
 	left: 0;
 	height: 100vh;
@@ -15,23 +14,26 @@
 	z-index: 0;
 }
 
+.container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 70vh;
+}
+
 .image {
-	width: 30rem;
+	width: 20rem;
+	margin: 4rem;
 }
 
 .package {
+	height: 25rem;
 	padding: 0 2rem;
-	border: 1px solid #ded5cc;
+	margin: 2rem;
+	width: 20rem;
 	z-index: 20;
-	color: #aa380b;
-}
-
-.left {
-	margin-left: 20rem;
-}
-
-.right {
-	margin-right: 20rem;
+	color: #993c20;
+	background: #fff;
 }
 
 .title {
@@ -39,12 +41,58 @@
 	font-weight: 400;
 	font-size: 4rem;
 	text-align: center;
+	margin: 0.5rem 1rem;
 }
 
 .price {
 	color: #000;
+	margin-bottom: 0;
 }
 
-.packageLeft li {
+.package li {
 	list-style: inside;
+	line-height: 1rem;
+	padding: 0.5rem;
+}
+
+.banner {
+	width: 100vw;
+	height: 30vh;
+	background: url('https://images.unsplash.com/photo-1641664638369-f77f0ca24cbb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=776&q=80');
+	background-position: top left;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+}
+
+.bannerImage {
+	opacity: 0.7;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	overflow: hidden;
+	object-position: top left;
+}
+
+.overlay {
+	color: #fff;
+	background: rgba(0, 0, 0, 0.2);
+	height: 30vh;
+	width: 100vw;
+	position: absolute;
+	bottom: 0;
+	display: flex;
+	flex-direction: column;
+	/* justify-content: center; */
+	align-items: center;
+}
+
+.tagline {
+	font-family: 'Hello January';
+	/* text-transform: uppercase; */
+	font-weight: 400;
+	font-size: 5rem;
+	letter-spacing: 0.5rem;
+	text-shadow: 1px 1px #fff;
+	margin: 4rem;
 }
