--- a/src/components/Sections/Options/Families.module.css
+++ b/src/components/Sections/Options/Families.module.css
@@ -1,3 +1,7 @@
+.pageBG {
+	background-color: #745e48;
+}
+
 .families {
 	background: url('https://images.unsplash.com/photo-1511895426328-dc8714191300?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3270&q=80');
 	background-position: center center;
