--- a/src/components/Sections/Footer.module.css
+++ b/src/components/Sections/Footer.module.css
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 100vw;
-	height: 40vh;
+	/* height: 40vh; */
 	align-items: center;
 	justify-content: space-between;
 	background-color: #ded5cc;
@@ -11,8 +11,9 @@
 }
 
 .logo {
-	width: 50rem;
+	width: 40rem;
 	height: auto;
+	margin-bottom: 2rem;
 }
 
 .navList {
