--- a/src/components/Sections/Header.module.css
+++ b/src/components/Sections/Header.module.css
@@ -2,7 +2,7 @@
 	position: fixed;
 	display: flex;
 	width: 100vw;
-	height: 8vh;
+	/* height: 8vh; */
 	/* max-width: 2000px; */
 	flex-wrap: wrap;
 	justify-content: space-between;
