--- a/src/components/Sections/Options/Weddings.module.css
+++ b/src/components/Sections/Options/Weddings.module.css
@@ -6,11 +6,64 @@
 }
 
 .banner {
-	width: 100vw;
-	height: 30vh;
+	position: relative;
+	width: 100%;
+	height: 25rem;
 	background: url('/src/assets/images/wedding-detail.jpg');
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
+}
+
+.addonsContainer {
+	display: flex;
+	flex-direction: column;
+	/* justify-content: center; */
+	text-align: center;
+	align-items: center;
+	color: #993c20;
+}
+
+.addonsTitle {
+	font-family: 'Pierson Light';
+	font-weight: 400;
+	font-size: 5rem;
+}
+
+.thin {
+	height: 1px;
+	align-self: center;
+	width: 20rem;
+	margin: 0.5rem;
+	color: #993c20;
+	background-color: #993c20;
+}
+
+.addonContainer {
+	max-width: 50rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	font-family: 'Pierson Light';
+	font-weight: 100;
+}
+
+.addon {
+	font-family: 'Buffalo';
+	font-weight: 100;
+	font-size: 3rem;
+	letter-spacing: 0.7rem;
+}
+
+.addonPrice {
+	font-size: 2.5rem;
+}
+
+.addonText {
+	font-size: 1.5rem;
+}
+
+.disclaimer {
+	font-size: 1rem;
 }
