--- a/src/components/Sections/Banner.module.css
+++ b/src/components/Sections/Banner.module.css
@@ -6,7 +6,7 @@ section.banner {
 	flex-direction: column;
 }
 
-.banner h4 {
+/* .banner h4 {
 	font-family: 'Hello January';
 	font-size: 6rem;
 	padding-top: 6rem;
@@ -16,7 +16,7 @@ section.banner {
 	justify-content: center;
 	align-content: center;
 	align-items: center;
-}
+} */
 
 .imageDivider {
 	background-image: url('/src/assets/images/hand-of-god.jpg');
@@ -30,34 +30,34 @@ section.banner {
 }
 
 .colorDivider {
+	font-family: 'Raleway';
 	height: 50%;
 	width: 100%;
-	background-color: #e2a42c;
+	background-color: #fff;
 	text-align: center;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
-	color: #fff;
+	color: #aa380b;
 }
 
 .colorDivider h3 {
 	text-transform: uppercase;
-	font-family: 'Pierson Light';
-	font-size: 3rem;
+	font-size: 5rem;
 	letter-spacing: 0.2em;
-	text-shadow: 0 0 5px #000;
+	margin-bottom: 0.5rem;
 }
 
 .colorDivider p {
-	font-family: 'Raleway';
 	font-size: 1.4rem;
 	line-height: 2rem;
 	width: 60%;
 }
 
 .colorDivider button {
+	font-family: 'Raleway';
 	border: none;
 	border-radius: 0.3rem;
 	font-size: 1.2rem;
