--- a/src/components/Sections/Options/Families.module.css
+++ b/src/components/Sections/Options/Families.module.css
@@ -1,6 +1,6 @@
-.pageBG {
+/* .pageBG {
 	background-color: #745e48;
-}
+} */
 
 .families {
 	background: url('/src/assets/images/family-main.jpg');
@@ -10,8 +10,9 @@
 }
 
 .banner {
-	width: 100vw;
-	height: 30vh;
+	width: 100%;
+	height: 25rem;
+	position: relative;
 	background: url('/src/assets/images/whit-austin-woods.jpg');
 	background-position: center center;
 	background-repeat: no-repeat;
