--- a/src/components/UI/Options.module.css
+++ b/src/components/UI/Options.module.css
@@ -13,7 +13,7 @@
 
 .optionsGroup {
 	position: absolute;
-	top: 80vh;
+	top: 50rem;
 	/* left: 0; */
 	display: flex;
 	justify-content: center;
@@ -32,11 +32,13 @@
 	height: 7.5rem;
 	margin: 1rem;
 	padding: 2rem 2.5rem;
-	background: rgba(153, 60, 32, 0.6);
 	border-radius: 0.9rem;
-	font-family: 'Hello January';
-	color: #fff;
+	font-family: 'Brian-Strait';
+	font-weight: 500;
+	letter-spacing: 0.5rem;
+	color: #ded5cc;
 	font-size: 4.5rem;
+	text-shadow: 1px 1px solid #000;
 	box-shadow: 2px 2px 8px #000;
 }
 
