--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@
 body {
 	margin: 0;
 	overflow-y: scroll;
+	overflow-x: hidden;
 	scroll-snap-type: y mandatory;
 	height: 100vh;
 	font-family: 'Raleway';
