--- a/src/components/Pages/AllPackages.module.css
+++ b/src/components/Pages/AllPackages.module.css
@@ -9,20 +9,17 @@
 }
 
 .container {
+	position: relative;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 40rem;
 }
 
-/* .image {
-	width: 20rem;
-	margin: 4rem;
-} */
-
 .package {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
 	height: 25rem;
 	padding: 0 2rem;
 	margin: 2rem;
@@ -55,7 +52,6 @@
 .banner {
 	width: 100vw;
 	height: 30rem;
-	background: url('https://images.unsplash.com/photo-1641664638369-f77f0ca24cbb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=776&q=80');
 	background-position: top left;
 	background-repeat: no-repeat;
 	background-size: cover;
