--- a/src/components/Sections/Hero.module.css
+++ b/src/components/Sections/Hero.module.css
@@ -2,15 +2,6 @@
 	height: 200vh;
 }
 
-/* .hero {
-	width: 100vw;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	color: #fff;
-} */
-
 /* Container styles */
 
 .container {
@@ -87,17 +78,18 @@
 	color: rgba(255, 255, 255, 0.7);
 }
 
-/* .scroll-button,
-img {
+.scrollButton {
 	border: none;
 	background: transparent;
 	position: absolute;
 	width: 200px;
 	left: 41%;
-	top: 200%;
+	bottom: 0;
+	z-index: 1000;
 	-webkit-animation: bounce 1.5s infinite;
 	animation: bounce 1.5s infinite;
-} */
+	cursor: pointer;
+}
 
 /* .scroll-button img {
 	background: transparent;
