--- a/src/components/Sections/Header.module.css
+++ b/src/components/Sections/Header.module.css
@@ -18,6 +18,7 @@
 	margin: auto 2.5rem;
 	/* Fallback img */
 	/* background: url('../../assets/WB-Submark-CMYK.png'); */
+	cursor: pointer;
 }
 
 .headerNav {
@@ -37,6 +38,7 @@ a {
 	text-decoration: none;
 	/* color: #993c20; */
 	font-size: 1.1rem;
+	cursor: pointer;
 }
 
 li {
