--- a/src/components/Sections/Hero.module.css
+++ b/src/components/Sections/Hero.module.css
@@ -82,13 +82,15 @@
 	border: none;
 	background: transparent;
 	position: absolute;
-	width: 200px;
-	left: 41%;
-	bottom: 0;
+	font-size: 64px;
+	left: 48%;
+	bottom: 10px;
 	z-index: 1000;
-	-webkit-animation: bounce 1.5s infinite;
-	animation: bounce 1.5s infinite;
+	text-align: center;
+	/* -webkit-animation: bounce 1.5s infinite;
+	animation: bounce 1.5s infinite; */
 	cursor: pointer;
+	color: #000;
 }
 
 /* .scroll-button img {
