--- a/src/index.css
+++ b/src/index.css
@@ -36,10 +36,16 @@
 	scroll-behavior: smooth;
 } */
 
+html,
+body {
+	max-width: 100%;
+	overflow-x: hidden;
+}
+
 body {
 	margin: 0;
 	overflow-y: scroll;
-	overflow-x: hidden;
+	/* overflow-x: hidden; */
 	scroll-snap-type: y mandatory;
 	height: 100vh;
 	font-family: 'Raleway';
