--- a/src/components/Sections/Hero.module.css
+++ b/src/components/Sections/Hero.module.css
@@ -50,7 +50,7 @@
 
 .titleWrapper h1 {
 	text-align: center;
-	font-size: 6.5rem;
+	font-size: 6.4rem;
 	text-transform: uppercase;
 	letter-spacing: 0.4em;
 	margin-top: 10px;
@@ -125,5 +125,53 @@
 	}
 	100% {
 		transform: scale(1, 1) translate(0px, 0px);
+	}
+}
+@media screen and (max-width: 1200px) {
+	.titleWrapper h1 {
+		font-size: 6rem;
+		letter-spacing: 0.3em;
+		max-width: 100%;
+	}
+	.titleWrapper h5 {
+		font-size: 7rem;
+	}
+}
+
+@media screen and (max-width: 1025px) {
+	.titleWrapper h1 {
+		font-size: 5.5rem;
+	}
+	.titleWrapper h5 {
+		font-size: 6rem;
+	}
+
+	.scrollButton {
+		left: 45%;
+	}
+}
+
+@media screen and (max-width: 769px) {
+	.titleWrapper h1 {
+		font-size: 4rem;
+	}
+}
+
+@media screen and (max-width: 481px) {
+	.titleWrapper h1 {
+		font-size: 2.3rem;
+		letter-spacing: 0.2em;
+	}
+
+	.titleWrapper h5 {
+		font-size: 3rem;
+	}
+
+	.containerImage {
+		background-size: 100vh auto;
+	}
+
+	.scrollButton {
+		left: 42%;
 	}
 }
