--- a/src/components/UI/Nav/MenuIcon.module.css
+++ b/src/components/UI/Nav/MenuIcon.module.css
@@ -1,4 +1,5 @@
 .ham {
+	display: none;
 	cursor: pointer;
 	-webkit-tap-highlight-color: transparent;
 	transition: transform 400ms;
@@ -9,9 +10,10 @@
 }
 
 .line {
+	display: none;
 	fill: none;
 	transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-	stroke: #000;
+	stroke: #aa380b;
 	stroke-width: 5.5;
 	stroke-linecap: round;
 }
@@ -35,4 +37,14 @@
 .ham3.active .bottom {
 	stroke-dasharray: 110 205;
 	stroke-dashoffset: -86px;
+}
+
+@media screen and (max-width: 481px) {
+	.line {
+		display: block;
+	}
+
+	.ham {
+		display: block;
+	}
 }
