--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,6 @@ body {
 	overflow-y: scroll;
 	/* overflow-x: hidden; */
 	scroll-snap-type: y mandatory;
-	height: 100vh;
+	/* height: 100vh; */
 	font-family: 'Raleway';
 }
