--- a/src/components/UI/Nav/MenuIcon.module.css
+++ b/src/components/UI/Nav/MenuIcon.module.css
@@ -7,6 +7,13 @@
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	z-index: 1000;
+	position: absolute;
+	top: 1.2rem;
+	right: 1.5rem;
+	background: transparent;
+	cursor: pointer;
+	outline: none;
 }
 
 .line {
@@ -16,6 +23,13 @@
 	stroke: #aa380b;
 	stroke-width: 5.5;
 	stroke-linecap: round;
+	z-index: 1000;
+	position: absolute;
+	top: 1.2rem;
+	right: 1.5rem;
+	background: transparent;
+	cursor: pointer;
+	outline: none;
 }
 
 .ham3 .top {
