--- a/src/components/Pages/AllPackages.module.css
+++ b/src/components/Pages/AllPackages.module.css
@@ -58,14 +58,14 @@
 	background-attachment: fixed;
 }
 
-.bannerImage {
+/* .bannerImage {
 	opacity: 0.7;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 	overflow: hidden;
 	object-position: top left;
-}
+} */
 
 .overlay {
 	color: #fff;
